--- a/services.html
+++ b/services.html
@@ -331,12 +331,12 @@
                                     </li>
                                     <li>
                                         <a href="#s" onclick="showSection('section3')">
-                                            Waste Trades <span class="icon-right-arrow"></span>
+                                            Waste Recycling and Trades <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#s" onclick="showSection('section4')">
-                                            Waste Recycling <span class="icon-right-arrow"></span>
+                                            Waste recycling <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
@@ -374,46 +374,32 @@
                             </div>
 
                             <div class="text-box1 section" id="section1" style="display: block;">
-                                <h2> Waste Collection & Transport</h2>
-                                <p> waste collection ... Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
+                                <h2>UWM Brief Section 1</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
 
                             <div class="text-box1 section" id="section2" style="display: none;">
-                                <h2>Incineration of Waste</h2>
-                                <p>We have a state-of-the-art high-temperature waste incineration facility which complies with all the relevant standards including:
-                                    <ul>
-                                        <li><span class="icon-check-mark-button"></span> Hazardous Substance Rules, 2014.</li>
-                                        <li><span class="icon-check-mark-button"></span> National Hazardous Waste Management Policy 2022</li>
-                                    </ul>
-                                     
+                                <h2>UWM Brief Section 2</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
 
                             <div class="text-box1 section" id="section3" style="display: none;">
-                                <h2>Waste Trades </h2>
+                                <h2>UWM Brief Section 3</h2>
                                 <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
 
                             <div class="text-box1 section" id="section4" style="display: none;">
-                                <h2>Waste Recycling</h2>
+                                <h2>UWM Brief Section 4</h2>
                                 <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
 
                             <div class="text-box1 section" id="section5" style="display: none;">
-                                <h2>Waste Consultancy</h2>
+                                <h2>UWM Brief Section 5</h2>
                                 <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
-                                </p>
-                            </div>
-                            <div class="text-box1">
-                                <h2>UWM Brief</h2>
-                                <p>UWM is a member of Global group of companies together which provides all services related to environmental aspects. We have our own ISO 17025 Certified Environmental lab for testing environmental samples such as drinking water, waste water, etc.  
-                                    Other companies in Global Group of Companies:
-                                    Global Environmental Management Services (GEMS)
-                                    Global Environmental Lab (GEL)
-                                     
                                 </p>
                             </div>
 
