--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <script src="assets/js/html5shiv.js"></script>
     <![endif]-->
-
 </head>
 
 
@@ -388,7 +387,7 @@
                                     <div class="single-features-style1">
                                         <div class="icon-holder">
                                             <div class="box"></div>
-                                            <span class="icon-dustbin"></span>
+                                            <span class="icon-industry"></span>
                                         </div>
                                         <div class="text-holder">
                                             <h3><a href="services-single-1.html">Industry’s No 1 Choice</a></h3>
@@ -400,7 +399,7 @@
                                     <div class="single-features-style1">
                                         <div class="icon-holder">
                                             <div class="box"></div>
-                                            <span class="icon-garbage-can"></span>
+                                            <span class="icon-office1"></span>
                                         </div>
                                         <div class="text-holder">
                                             <h3><a href="services-single-2.html">Modern Facility</a></h3>
