--- a/about.html
+++ b/about.html
@@ -722,7 +722,7 @@
                                     </div>
                                     <div class="our-company-info">
                                         <div class="text-box">
-                                            <p>United Waste Management is a company that provides waste management solutions in Sindh and Balochistan. </p>
+                                            <p>United Waste Management is a member of Global Group of Companies which provide Environmental solutions to the industries in Sindh and Balochistan.  </p>
                                         </div>
                                         <div class="footer-social-link">
                                             <ul class="clearfix">
@@ -840,8 +840,8 @@
                     <div class="container">
                         <div class="bottom-inner">
                             <div class="copyright">
-                                <p>Copyright &copy; 2024 <a href="index.html">BizzDS</a> All Rights Reserved.</p>
-                                <p>Copyright &copy; 2024 <a href="index.html">BizzDS</a> All Rights Reserved.</p>
+                                <p>Copyright &copy; 2024 | <a href="https://bizzds.com/">BizzDS</a> | All Rights Reserved.</p>
+                               
                                 
                             </div>
                         </div>
