--- a/contact.html
+++ b/contact.html
@@ -326,9 +326,7 @@
 
                     <div class="col-xl-4">
                         <div class="slogan-text-box">
-                            <p>Lorem ipsum dolor sit amet nsectetur
-                                cing elituspe ndisse suscipit sagitis
-                                leo sit.</p>
+                            <p>Got any question? Please feel free to contact us for any waste related queries.</p>
                         </div>
                     </div>
                     <div class="col-xl-3">
@@ -344,13 +342,13 @@
                 <div class="row mt-5 text-center">
                         <div class=" col slogan-text-box border-right">
                             <h2 class="text-light">Site office</h2>
-                            <p>korangi industrial area karachi 1</p>
-                            <p>03132888355</p>
+                            <p>Northern Bypass road, Karachi</p>
+                            <p>021 312345678</p>
                         </div>
                         <div class="col slogan-text-box mt-3">
                             <h2 class="text-light">Corporate office</h2>
-                            <p>korangi industrial area karachi 2</p>
-                            <p>03132888355</p>
+                            <p>korangi industrial area karachi</p>
+                            <p>021 312345678</p>
                         </div>
 
                 </div>
@@ -493,7 +491,7 @@
                                     </div>
                                     <div class="our-company-info">
                                         <div class="text-box">
-                                            <p>United Waste Management is a company that provides waste management solutions in Sindh and Balochistan. </p>
+                                            <p>United Waste Management is a member of Global Group of Companies which provide Environmental solutions to the industries in Sindh and Balochistan.  </p>
                                         </div>
                                         <div class="footer-social-link">
                                             <ul class="clearfix">
@@ -611,8 +609,8 @@
                     <div class="container">
                         <div class="bottom-inner">
                             <div class="copyright">
-                                <p>Copyright &copy; 2024 <a href="index.html">BizzDS</a> All Rights Reserved.</p>
-                                <p>Copyright &copy; 2024 <a href="index.html">BizzDS</a> All Rights Reserved.</p>
+                                <p>Copyright &copy; 2024 | <a href="https://bizzds.com/">BizzDS</a> | All Rights Reserved.</p>
+                               
                                 
                             </div>
                         </div>
