--- a/services.html
+++ b/services.html
@@ -386,10 +386,10 @@
 
                             <div class="text-box1 section" id="section2" style="display: none;">
                                 <h2>Incineration of Waste</h2>
-                                <p>We have a state-of-the-art high-temperature waste incineration facility which complies with all the relevant standards including:
-                                    Hazardous Substance Rules, 2014.  
-                                    National Hazardous Waste Management Policy 2022
-                                    The Sindh Solid Waste Management Act, 2021
+                                <p>We have a state-of-the-art high-temperature waste incineration facility which complies with all the relevant standards including: <br>
+                                    Hazardous Substance Rules, 2014.  <br>
+                                    National Hazardous Waste Management Policy 2022 <br>
+                                    The Sindh Solid Waste Management Act, 2021 <br>
                                     
                                 </p>
                             </div>
