--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                                   
                                                 </ul>
                                             </li>
-                                            <li class="dropdown"><a href="#"><span>Gallery</span></a>
+                                            <li class="dropdown"><a href="gallery.html"><span>Gallery</span></a>
                                             </li>
                                             <li><a href="contact.html"><span>Contact</span></a></li>
                                         </ul>
