--- a/gallery.html
+++ b/gallery.html
@@ -194,12 +194,12 @@
                                 data-aos-duration="1500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">About Us</li>
+                                    <li class="active">Gallery</li>
                                 </ul>
                             </div>
 
                             <div class="title" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
-                                <h2>About Us</h2>
+                                <h2>Gallery</h2>
                             </div>
 
                         </div>
