--- a/gallery.html
+++ b/gallery.html
@@ -223,9 +223,9 @@
                     <div class="container mb-5">
                         <div class="sec-title">
                             <div class="sub-title">
-                                <h3>Our Partners in Environmental Sustainability</h3>
+                                <h3>Our Site office</h3>
                             </div>
-                            <h2>Trusted by</h2>
+                            <h2>Gallery</h2>
                         </div>
                         
                         <div class="row">
